add user prediction fuction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(Gini_rank)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
+import(e1071)
 import(rlang)
 import(stats)
 import(survival)
+import(sva)
 import(utils)
 importFrom(pROC,roc)
