--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Gini_rank)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
+export(response_standardize)
 import(e1071)
 import(rlang)
 import(stats)
