--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,11 @@ export(build_SVM_model)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
+export(geneCorr)
+export(geneSurv)
 export(response_standardize)
 import(e1071)
+import(pROC)
 import(randomForest)
 import(rlang)
 import(stats)
