add build_LogitBoost_Model function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Gini_rank)
 export(build_Adaboost_model)
 export(build_CC_model)
+export(build_Logitboost_model)
 export(build_NB_model)
 export(build_RF_model)
 export(build_SVM_model)
@@ -20,5 +21,6 @@ import(survival)
 import(sva)
 import(utils)
 importFrom(adabag,boosting)
+importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
 importFrom(pROC,roc)
