bug fix: allow gene deficient in grading function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,19 @@ export(EMT2_grading)
 export(EMT3_grading)
 export(Gini_rank)
 export(IFNG_grading)
+export(IPS_grading)
+export(IRS_grading)
 export(LMRGPI_grading)
 export(MEMTS_grading)
 export(MSKCC_grading)
 export(Myeloid_inflammatory_grading)
 export(PRGScore_grading)
+export(PRS_grading)
 export(PanFTBRs_grading)
+export(Riskscore_grading)
+export(Stemnesssignatures_grading)
+export(TLS_grading)
+export(Tcell_inflamed_GEP_grading)
 export(Teffector_grading)
 export(build_Adaboost_model)
 export(build_CC_model)
@@ -28,6 +35,7 @@ export(extract_mtr)
 export(geneCorr)
 export(geneSurv)
 export(response_standardize)
+export(tGE8_grading)
 import(e1071)
 import(randomForest)
 import(rlang)
