--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(Stemnesssignatures_grading)
 export(TLS_grading)
 export(Tcell_inflamed_GEP_grading)
 export(Teffector_grading)
+export(average_mean_signature)
 export(build_Adaboost_model)
 export(build_CC_model)
 export(build_Logitboost_model)
@@ -36,6 +37,7 @@ export(geneCorr)
 export(geneSurv)
 export(response_standardize)
 export(tGE8_grading)
+export(weight_mean_signature)
 import(e1071)
 import(randomForest)
 import(rlang)
