add function ZScore_PCA_signature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(Stemnesssignatures_grading)
 export(TLS_grading)
 export(Tcell_inflamed_GEP_grading)
 export(Teffector_grading)
+export(ZScore_PCA_signature)
 export(average_mean_signature)
 export(build_Adaboost_model)
 export(build_CC_model)
