add predict_signature function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(extract_label)
 export(extract_mtr)
 export(geneCorr)
 export(geneSurv)
+export(predict_Signature)
 export(response_standardize)
 export(tGE8_grading)
 export(weight_mean_signature)
