add build_logistics_model function and max_min_normalization function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ZScore_PCA_signature)
 export(average_mean_signature)
 export(build_Adaboost_model)
 export(build_CC_model)
+export(build_Logistics_model)
 export(build_Logitboost_model)
 export(build_NB_model)
 export(build_RF_model)
@@ -17,6 +18,7 @@ export(extract_label)
 export(extract_mtr)
 export(geneCorr)
 export(geneSurv)
+export(max_min_normalization)
 export(predict_Signature)
 export(response_standardize)
 export(survival_Score)
