reform build_NB_model function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
+importFrom(e1071,naiveBayes)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
