add plot_differential function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,8 @@ export(response_standardize)
 export(tGE8_grading)
 export(weight_mean_signature)
 import(e1071)
-import(randomForest)
+import(ggplot2)
+import(ggpubr)
 import(rlang)
 import(stats)
 import(survival)
@@ -35,3 +36,4 @@ importFrom(e1071,naiveBayes)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
+importFrom(randomForest,randomForest)
