--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
 export(max_min_normalization)
+export(plot_differential)
 export(predict_Signature)
 export(response_standardize)
 export(tGE8_grading)
