--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,9 @@ export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
 export(max_min_normalization)
-export(plot_TvsUT)
 export(plt_RvsNR)
+export(plt_TvsUT)
+export(plt_surv)
 export(predict_Signature)
 export(response_standardize)
 export(tGE8_grading)
@@ -35,7 +36,11 @@ importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
 importFrom(e1071,naiveBayes)
+importFrom(ggplot2,theme_bw)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
+importFrom(survival,Surv)
+importFrom(survival,survfit)
+importFrom(survminer,ggsurvplot)
