add build_model function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(build_Logitboost_model)
 export(build_NB_model)
 export(build_RF_model)
 export(build_SVM_model)
+export(build_model)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
@@ -23,7 +24,6 @@ export(predict_Signature)
 export(response_standardize)
 export(tGE8_grading)
 export(weight_mean_signature)
-import(e1071)
 import(ggplot2)
 import(ggpubr)
 import(rlang)
