--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,11 @@ export(IRS_grading)
 export(Immunotherapy_Response)
 export(ZScore_PCA_signature)
 export(average_mean_signature)
-export(build_Adaboost_model)
-export(build_CC_model)
-export(build_Logistics_model)
-export(build_Logitboost_model)
-export(build_NB_model)
-export(build_RF_model)
-export(build_SVM_model)
 export(build_model)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
+export(extract_mtr_dev)
 export(max_min_normalization)
 export(plt_diff)
 export(plt_surv)
@@ -29,7 +23,6 @@ import(ggpubr)
 import(rlang)
 import(stats)
 import(survival)
-import(sva)
 import(utils)
 importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
