--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(build_model)
 export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
-export(extract_mtr_dev)
 export(max_min_normalization)
 export(plt_diff)
 export(plt_surv)
@@ -30,6 +29,7 @@ importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
 importFrom(e1071,naiveBayes)
 importFrom(ggplot2,theme_bw)
+importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
