--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,13 +27,19 @@ importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
+importFrom(dplyr,pull)
+importFrom(dplyr,summarise)
 importFrom(e1071,naiveBayes)
 importFrom(ggplot2,theme_bw)
+importFrom(ggpubr,group_by)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
+importFrom(reshape2,melt)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
