--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(dataPreprocess)
 export(extract_label)
 export(extract_mtr)
 export(max_min_normalization)
+export(plt_CIBERSORT)
 export(plt_diff)
 export(plt_surv)
 export(predict_Signature)
