add diff_gene function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,9 @@ Imports:
   survminer,
   preprocessCore,
   dplyr,
-  reshape2
+  reshape2,
+  rstatix,
+  tidyr
 Depends: R (>= 3.5.0)
 Suggests: 
     knitr,
