--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ZScore_PCA_signature)
 export(average_mean_signature)
 export(build_model)
 export(dataPreprocess)
+export(diff_gene)
 export(extract_label)
 export(extract_mtr)
 export(max_min_normalization)
@@ -28,7 +29,10 @@ importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,desc)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,pull)
 importFrom(dplyr,summarise)
 importFrom(e1071,naiveBayes)
@@ -40,6 +44,8 @@ importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
 importFrom(reshape2,melt)
+importFrom(rstatix,t_test)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
+importFrom(tidyr,pivot_longer)
