--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
 importFrom(reshape2,melt)
+importFrom(rlang,.data)
 importFrom(rstatix,t_test)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
