add Dataloader function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ import(rlang)
 import(stats)
 import(survival)
 import(utils)
+importFrom(AnnotationHub,query)
+importFrom(ExperimentHub,ExperimentHub)
 importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
