--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(IRS_grading)
 export(Immunotherapy_Response)
 export(ZScore_PCA_signature)
 export(average_mean_signature)
-export(build_model)
+export(build_Model)
 export(dataPreprocess)
 export(diff_gene)
 export(extract_label)
