--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,9 @@ Imports:
   tidyr,
   AnnotationHub,
   ExperimentHub
+Suggests:
+  knitr,
+  rmarkdown,
+  prettydoc
 Depends: R (>= 3.5.0)
-Suggests: 
-    knitr,
-    rmarkdown
 VignetteBuilder: knitr
