rename predict_Signature function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Immunotherapy_Response)
 export(ZScore_PCA_signature)
 export(average_mean_signature)
 export(build_Model)
+export(calculate_Signature_Score)
 export(dataPreprocess)
 export(diff_gene)
 export(extract_label)
@@ -15,7 +16,6 @@ export(extract_mtr)
 export(max_min_normalization)
 export(plt_diff)
 export(plt_surv)
-export(predict_Signature)
 export(response_standardize)
 export(tGE8_grading)
 export(weight_mean_signature)
