--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(plt_diff)
 export(plt_surv)
 export(response_standardize)
 export(tGE8_grading)
+export(test_Model)
 export(weight_mean_signature)
 import(ggplot2)
 import(ggpubr)
