--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(weight_mean_signature)
 import(ggplot2)
 import(ggpubr)
 import(rlang)
-import(stats)
 import(survival)
 import(utils)
 importFrom(AnnotationHub,query)
@@ -32,6 +31,7 @@ importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
+importFrom(cancerclass,predict)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,group_by)
@@ -46,6 +46,16 @@ importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(stats,binomial)
+importFrom(stats,cor)
+importFrom(stats,glm)
+importFrom(stats,median)
+importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
+importFrom(stats,prcomp)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(stats,t.test)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
