--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(AnnotationHub,query)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
+importFrom(adabag,predict.boosting)
 importFrom(caTools,LogitBoost)
 importFrom(cancerclass,fit)
 importFrom(cancerclass,predict)
