--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ export(tGE8_grading)
 export(test_Model)
 export(weight_mean_signature)
 import(ggplot2)
-import(ggpubr)
 import(rlang)
 import(survival)
 import(utils)
@@ -40,6 +39,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,summarise)
 importFrom(e1071,naiveBayes)
 importFrom(ggplot2,theme_bw)
+importFrom(ggpubr,stat_compare_means)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
