--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Dataloader)
 export(Gini_gene)
 export(IRS_grading)
 export(Immunotherapy_Response)
+export(Signature_assessment)
 export(ZScore_PCA_signature)
 export(average_mean_signature)
 export(build_Model)
