renew function Response_Immunotherapy:add multi-gene analysis(support GSVA, average mean and weighted mean)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,10 +34,12 @@ Imports:
   reshape2,
   dplyr,
   AnnotationHub,
-  ExperimentHub
+  ExperimentHub,
+  S4Vectors
 Suggests:
   knitr,
   rmarkdown,
-  prettydoc
+  prettydoc,
+  GSVA
 Depends: R (>= 3.5.0)
 VignetteBuilder: knitr
