--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(dataPreprocess)
 export(diff_gene)
 export(extract_label)
 export(extract_mtr)
+export(load_from_ExperimentHub)
+export(load_from_WebServer)
 export(max_min_normalization)
 export(plt_diff)
 export(plt_surv)
@@ -27,6 +29,9 @@ import(survival)
 import(utils)
 importFrom(AnnotationHub,query)
 importFrom(ExperimentHub,ExperimentHub)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(adabag,boosting)
 importFrom(adabag,predict.boosting)
