renew:build_Model and test_Model function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(Immunotherapy_Response)
 export(Signature_assessment)
 export(abis)
 export(build_Model)
+export(build_Model.default)
+export(build_Model.matrix)
 export(calculate_Signature_Score)
 export(dataPreprocess)
 export(diff_gene)
@@ -23,6 +25,8 @@ export(plt_surv)
 export(response_standardize)
 export(tGE8_grading)
 export(test_Model)
+export(test_Model.default)
+export(test_Model.matrix)
 export(xCell)
 import(ggplot2)
 import(rlang)
