--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(max_min_normalization)
 export(plt_diff)
 export(plt_surv)
 export(quanTIseq)
+export(response_filter)
 export(response_standardize)
 export(tGE8_grading)
 export(test_Model)
@@ -40,14 +41,11 @@ export(test_Model.default)
 export(test_Model.matrix)
 export(xCell)
 import(ggplot2)
-import(rlang)
 import(survival)
-import(utils)
 importFrom(AnnotationHub,query)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(SummarizedExperiment,assay)
 importFrom(cancerclass,fit)
-importFrom(e1071,naiveBayes)
 importFrom(ggplot2,theme_bw)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
