--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,9 @@ export(test_Model.default)
 export(test_Model.matrix)
 export(xCell)
 import(ggplot2)
+import(rlang)
 import(survival)
+import(utils)
 importFrom(AnnotationHub,query)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(SummarizedExperiment,assay)
@@ -61,6 +63,7 @@ importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
