--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,8 @@ Suggests:
   S4Vectors,
   quantiseqr,
   xCell,
+  glmnet,
+  Hmisc,
   testthat (>= 3.0.0)
 Depends: R (>= 3.5.0)
 VignetteBuilder: knitr
