--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ESTIMATE)
 export(Gini_gene)
 export(IRS_grading)
 export(Immunotherapy_Response)
+export(Immunotherapy_Response_Batch)
 export(MCPCounter)
 export(MCPcounter.estimate)
 export(SE_Merging)
