--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(pROC,roc)
 importFrom(randomForest,randomForest)
+importFrom(rlang,.data)
+importFrom(rlang,current_env)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,median)
