--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(plt_surv)
 export(quanTIseq)
 export(response_filter)
 export(response_standardize)
+export(surv_styling)
 export(tGE8_grading)
 export(test_Model)
 export(test_Model.default)
