--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,34 +8,47 @@ export(ConsensusTME)
 export(Dataloader)
 export(ESTIMATE)
 export(Gini_gene)
+export(IPS)
 export(IRS_grading)
-export(Immunotherapy_Response)
 export(Immunotherapy_Response_Batch)
 export(MCPCounter)
 export(MCPcounter.estimate)
-export(SE_Merging)
-export(Signature_assessment)
-export(Signature_calculation)
 export(TIMER)
 export(bind_meta)
 export(bind_mtr)
+export(browse_biomk)
 export(build_Model)
+export(cell_name_filter)
+export(compare_biomk)
+export(compare_roc)
 export(dataPreprocess)
 export(dataProcess)
 export(data_standardization)
+export(deconv_TME)
+export(diff_biomk)
 export(diff_gene)
+export(draw_bar)
 export(epic)
 export(extract_label)
 export(extract_mtr)
 export(fpkm2tpm)
+export(fraction_pie)
+export(integrate_analysis)
+export(ipsmap)
 export(load_from_ExperimentHub)
 export(load_from_WebServer)
+export(mapbw)
+export(mapcolors)
 export(max_min_normalization)
-export(plt_diff)
-export(plt_surv)
+export(merge_SE)
+export(pred_response)
 export(quanTIseq)
 export(response_filter)
+export(response_prediction)
 export(response_standardize)
+export(roc_biomk)
+export(score_biomk)
+export(surv_biomk)
 export(surv_styling)
 export(tGE8_grading)
 export(test_Model)
@@ -43,6 +56,7 @@ export(test_Model.default)
 export(test_Model.matrix)
 export(xCell)
 import(ggplot2)
+import(patchwork)
 import(survival)
 import(utils)
 importFrom(AnnotationHub,query)
