--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(Immunotherapy_Response_Batch)
 export(MCPCounter)
 export(MCPcounter.estimate)
 export(TIMER)
+export(TIMER_SE)
 export(bind_meta)
 export(bind_mtr)
 export(browse_biomk)
@@ -23,6 +24,7 @@ export(compare_biomk)
 export(compare_roc)
 export(dataPreprocess)
 export(dataProcess)
+export(dataProcess_SE)
 export(data_standardization)
 export(deconv_TME)
 export(diff_biomk)
@@ -48,12 +50,14 @@ export(response_prediction)
 export(response_standardize)
 export(roc_biomk)
 export(score_biomk)
+export(score_biomk_SE)
 export(surv_biomk)
 export(surv_styling)
 export(tGE8_grading)
 export(test_Model)
 export(test_Model.default)
 export(test_Model.matrix)
+export(to1)
 export(xCell)
 import(ggplot2)
 import(patchwork)
