--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ import(utils)
 importFrom(AnnotationHub,query)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,colData)
 importFrom(cancerclass,fit)
 importFrom(ggplot2,theme_bw)
 importFrom(magrittr,"%$%")
