--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(CIBERSORT)
 export(ConsensusTME)
 export(Dataloader)
 export(ESTIMATE)
-export(Gini_gene)
 export(IPS)
 export(IRS_grading)
 export(Immunotherapy_Response_Batch)
@@ -35,6 +34,7 @@ export(extract_label)
 export(extract_mtr)
 export(fpkm2tpm)
 export(fraction_pie)
+export(gini_gene)
 export(integrate_analysis)
 export(ipsmap)
 export(load_from_ExperimentHub)
