--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,16 +16,20 @@ export(TIMER)
 export(TIMER_SE)
 export(bind_meta)
 export(bind_mtr)
+export(browse_BE)
 export(browse_biomk)
 export(build_Model)
 export(cell_name_filter)
+export(cell_name_standardization)
 export(compare_biomk)
 export(compare_roc)
+export(count2tpm)
 export(dataPreprocess)
 export(dataProcess)
 export(dataProcess_SE)
 export(data_standardization)
 export(deconv_TME)
+export(diff_TME)
 export(diff_biomk)
 export(diff_gene)
 export(draw_bar)
@@ -45,6 +49,8 @@ export(max_min_normalization)
 export(merge_SE)
 export(pred_response)
 export(quanTIseq)
+export(refine_Reference)
+export(remove_BE)
 export(response_filter)
 export(response_prediction)
 export(response_standardize)
