--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(bind_meta)
 export(bind_mtr)
 export(browse_BE)
 export(browse_biomk)
+export(build_CellType_Ref)
 export(build_Model)
 export(cell_name_filter)
 export(cell_name_standardization)
@@ -49,7 +50,6 @@ export(max_min_normalization)
 export(merge_SE)
 export(pred_response)
 export(quanTIseq)
-export(refine_Reference)
 export(remove_BE)
 export(response_filter)
 export(response_prediction)
