--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ABIS)
 export(CIBERSORT)
 export(ConsensusTME)
 export(Dataloader)
+export(EPIC)
 export(ESTIMATE)
 export(IPS)
 export(IRS_grading)
@@ -34,7 +35,6 @@ export(diff_TME)
 export(diff_biomk)
 export(diff_gene)
 export(draw_bar)
-export(epic)
 export(extract_label)
 export(extract_mtr)
 export(fpkm2tpm)
